tests/snapshots/snapshot__type_errors@no_such_static_method.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/no_such_static_method.roto
---
Error: Type error: cannot find value `bar` in this scope
   ╭─[ tests/scripts/type_errors/no_such_static_method.roto:2:12 ]
   │
 2 │     String.bar();
   │            ─┬─  
   │             ╰─── not found in this scope
───╯
